--- a/frontend/EditAlbum.html
+++ b/frontend/EditAlbum.html
@@ -22,6 +22,10 @@
 
       <button type="submit" class="btn btn-primary">Guardar</button>
     </form>
+    <button type="button" id="eliminarBtn" class="btn">Eliminar Album</button>
+
+    <img id="imagenPreview" src="" alt="Imagen actual" class="img-thumbnail mb-3" style="display:none; max-width: 200px;">
+
   </div>
 
   <script src="js/EditAlbum.js"></script>
