--- a/frontend/albums.html
+++ b/frontend/albums.html
@@ -2,28 +2,39 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Albums</title>
-  
-  <!-- Bootstrap 5 -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Álbumes por Artista</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-  <link href="css/artista.css" rel="stylesheet">
-  <script src="js/album.js"></script>
 </head>
 <body>
-    <div class="container py-5">
-        <h1 class="text-center">Albums</h1>
-        <div class="row g-4" id="container">
-    
-          <!-- Géneros musicales con imágenes 
-          <div class="col-6 col-md-4 col-lg-3">
-             <div class="genre-card h-100">
-              <img src="https://i.imgur.com/JzhwJlm.jpg" alt="Rock"class="img-fluid">
-              <h5>Rock</h5>
-            </div>
-          </div>-->
+  <div class="container py-5">
+    <h1 class="text-center">Álbumes por Artista</h1>
+    <div id="albumesContainer" class="d-flex overflow-auto p-3"></div>
+
+  </div>
+
+  <!-- Modal de Álbum -->
+  <div class="modal fade" id="albumModal" tabindex="-1" aria-hidden="true">
+    <div class="modal-dialog modal-lg modal-dialog-centered">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 id="modalAlbumTitulo" class="modal-title"></h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cerrar"></button>
+        </div>
+        <div class="modal-body d-flex">
+          <img id="modalAlbumImagen" src="" alt="Portada" class="me-3" style="width: 200px; height: auto;">
+          <ul id="listaCanciones" class="list-group flex-fill"></ul>
+        </div>
+        <div class="modal-footer d-flex justify-content-between align-items-center">
+          <div id="flechasContainer"></div>
+          <audio id="audioPlayer" controls style="width: 300px;"></audio>
         </div>
       </div>
+    </div>
+  </div>
+  
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="js/album.js"></script>
 </body>
 </html>
