Faltan unas cinceladas mas de css

--- a/frontend/artistas.html
+++ b/frontend/artistas.html
@@ -7,6 +7,15 @@
   <link href="css/artista.css" rel="stylesheet">
 </head>
 <body>
+  <header class="header-personalizado shadow-sm p-3 position-relative">
+    <div class="container d-flex justify-content-between align-items-center">
+      <h1 class="h4 mb-0 text-white">Mi App de Música</h1>
+      <nav class="nav-links">
+        <a href="home.html" class="me-3 text-white text-decoration-none">Inicio</a>
+      </nav>
+    </div>
+    <div class="neon-border"></div>
+  </header>
   <div class="container py-5">
     <h1 class="text-center mb-4">Artistas del Género</h1>
     <div class="row g-4" id="artistasContainer">
