--- a/frontend/albums.html
+++ b/frontend/albums.html
@@ -5,8 +5,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Álbumes por Artista</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="css/albums.css" rel="stylesheet">
 </head>
 <body>
+  <header class="header-personalizado shadow-sm p-3 position-relative">
+    <div class="container d-flex justify-content-between align-items-center">
+      <h1 class="h4 mb-0 text-white">Mi App de Música</h1>
+      <nav class="nav-links">
+        <a href="home.html" class="me-3 text-white text-decoration-none">Inicio</a>
+      </nav>
+    </div>
+    <div class="neon-border"></div>
+  </header>
   <div class="container py-5">
     <h1 class="text-center">Álbumes por Artista</h1>
     <div id="albumesContainer" class="d-flex overflow-auto p-3"></div>
