--- a/frontend/home.html
+++ b/frontend/home.html
@@ -12,6 +12,15 @@
   <script src="js/home.js"></script>
 </head>
 <body>
+  <header class="header-personalizado shadow-sm p-3 position-relative">
+    <div class="container d-flex justify-content-between align-items-center">
+      <h1 class="h4 mb-0 text-white">Mi App de Música</h1>
+      <nav class="nav-links">
+        <a href="home.html" class="me-3 text-white text-decoration-none">Inicio</a>
+      </nav>
+    </div>
+    <div class="neon-border"></div>
+  </header>
     <div class="container py-5">
         <h1 class="text-center">Géneros Musicales</h1>
         <div class="row g-4">
