--- a/frontend/homeAdm.html
+++ b/frontend/homeAdm.html
@@ -10,8 +10,18 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
   <link href="css/home.css" rel="stylesheet">
   <script src="js/homeAdm.js"></script>
-</head>
 <body>
+  <header class="header-personalizado shadow-sm p-3 position-relative">
+    <div class="container d-flex justify-content-between align-items-center">
+      <h1 class="h4 mb-0 text-white">Mi App de Música</h1>
+      <nav class="nav-links">
+        <a href="homeAdm.html" class="me-3 text-white text-decoration-none">Inicio</a>
+        <a href="CreateGenero.html" class="me-3 text-white text-decoration-none">Crear Géneros</a>
+      </nav>
+    </div>
+    <div class="neon-border"></div>
+  </header>
+  
     <div class="container py-5">
         <h1 class="text-center">Géneros Musicales</h1>
         <div class="row g-4">
@@ -24,6 +34,6 @@
             </div>
           </div>
         </div>
-      </div>
+      </div>    
 </body>
 </html>
