Vista normal lista

--- a/frontend/artistas.html
+++ b/frontend/artistas.html
@@ -27,6 +27,9 @@
       </div>
     </div>
   </div>
+  <footer class="footer-con-imagen">
+    <img src="imagenesFrontend/jst.png" alt="Decoración Footer">
+  </footer>
   <script src="js/artistas.js"></script>
 </body>
 </html>
