--- a/frontend/home.html
+++ b/frontend/home.html
@@ -34,5 +34,8 @@
           </div>
         </div>
       </div>
+      <footer class="footer-con-imagen">
+        <img src="imagenesFrontend/jst.png" alt="Decoración Footer">
+      </footer>
 </body>
 </html>
