--- a/frontend/albums.html
+++ b/frontend/albums.html
@@ -10,7 +10,7 @@
 <body>
   <header class="header-personalizado shadow-sm p-3 position-relative">
     <div class="container d-flex justify-content-between align-items-center">
-      <h1 class="h4 mb-0 text-white">Mi App de Música</h1>
+      <h1 class="h4 mb-0 text-white">Jet Set Radio</h1>
       <nav class="nav-links">
         <a href="home.html" class="me-3 text-white text-decoration-none">Inicio</a>
       </nav>
@@ -42,9 +42,10 @@
       </div>
     </div>
   </div>
-  
-
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <script src="js/album.js"></script>
+  <footer class="footer-con-imagen">
+    <img src="imagenesFrontend/jst.png" alt="Decoración Footer">
+  </footer>
 </body>
 </html>
