Vista admin lista

--- a/frontend/artistas.html
+++ b/frontend/artistas.html
@@ -9,7 +9,7 @@
 <body>
   <header class="header-personalizado shadow-sm p-3 position-relative">
     <div class="container d-flex justify-content-between align-items-center">
-      <h1 class="h4 mb-0 text-white">Mi App de Música</h1>
+      <h1 class="h4 mb-0 text-white">Jet Set Radio</h1>
       <nav class="nav-links">
         <a href="home.html" class="me-3 text-white text-decoration-none">Inicio</a>
       </nav>
