--- a/frontend/cancionAdm.html
+++ b/frontend/cancionAdm.html
@@ -5,7 +5,7 @@
   <title>Lista de Canciones</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="css/crudgen.css" rel="stylesheet">
-
+  <link href="css/artista.css" rel="stylesheet">
   <script src="js/cancionAdm.js"></script>
 
 </head>
