--- a/frontend/artistas.html
+++ b/frontend/artistas.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>Artistas por Género</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
   <link href="css/artista.css" rel="stylesheet">
 </head>
 <body>
