--- a/frontend/cancionAdm.html
+++ b/frontend/cancionAdm.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>Lista de Canciones</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
   <link href="css/crudgen.css" rel="stylesheet">
   <link href="css/artista.css" rel="stylesheet">
   <script src="js/cancionAdm.js"></script>
