subida de canciones

--- a/frontend/homeAdm.html
+++ b/frontend/homeAdm.html
@@ -15,7 +15,7 @@
       <h1 class="h4 mb-0 text-white">Jet Set Radio</h1>
       <nav class="nav-links">
         <a href="homeAdm.html" class="me-3 text-white text-decoration-none">Inicio</a>
-        <a href="CreateGenero.html" class="me-3 text-white text-decoration-none">Crear Géneros</a>
+        <a href="CreateArtista.html" class="me-3 text-white text-decoration-none">Crear Artista</a>
       </nav>
     </div>
     <div class="neon-border"></div>
